# AWS-Rust-ETL

./: Cargo.toml  README.md  dockerfile
src/: main.rs
