[package]
name = "aws_rust_etl"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-sdk-textract = "1.20.0"
aws_lambda_events = { version = "0.15.0", default-features = false, features = ["s3"] }
aws-sdk-s3 = "1.23.0"

lambda_runtime = "0.11.1"
tokio = { version = "1", features = ["macros"] }
aws-config = "1.2.0"
tracing-subscriber = "0.3.18"
tracing = "0.1.40"

